style: fix overflow bug on smaller screens

--- a/css/main.scss
+++ b/css/main.scss
@@ -109,6 +109,7 @@ code {
 }
 
 pre {
+	overflow: visible;
 	margin: 0;
 	white-space: pre;
 }
